syntax = "proto3";

package pb;

option go_package = "./pb";

// Comment response
message CommentResponse {
  string comment_id = 1;
  string post_id = 2;
  string user_id = 3;
  string content = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
  bool is_approved = 7;
}

// Get comments by post ID response
message GetCommentsByPostIDResponse {
  repeated CommentResponse comments = 1;
}

// Delete comment response
message DeleteCommentResponse {}